# lime

./: .SRCINFO  LICENSE  PKGBUILD  README.md  pyproject.toml
lime/: Hatsune_Miku.txt  __init__.py  analyzer.py  ast_parser.py  aur_meta.py  cache.py  cli.py  config.py  core.py  diff.py  fetcher.py  graph.py  homoglyph.py  locale.py  output.py  plugins.py  report.py  sandbox.py  toctou.py  tui.py
