[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lime"
version = "1.0.0"
description = "Security wrapper over AUR (paru/yay) with risk analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "requests"
]

[project.scripts]
lime = "lime.cli:main"